; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/loongson64/lemote-2f/extr_reset.c_ml2f_shutdown.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/loongson64/lemote-2f/extr_reset.c_ml2f_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_SHUTDOWN_HIGH = common dso_local global i32 0, align 4
@EC_SHUTDOWN_IO_PORT_HIGH = common dso_local global i32 0, align 4
@REG_SHUTDOWN_LOW = common dso_local global i32 0, align 4
@EC_SHUTDOWN_IO_PORT_LOW = common dso_local global i32 0, align 4
@EC_SHUTDOWN_IO_PORT_DATA = common dso_local global i32 0, align 4
@BIT_SHUTDOWN_ON = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ml2f_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ml2f_shutdown() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @REG_SHUTDOWN_HIGH, align 4
  %4 = load i32, i32* @EC_SHUTDOWN_IO_PORT_HIGH, align 4
  %5 = call i32 @outb(i32 %3, i32 %4)
  %6 = load i32, i32* @REG_SHUTDOWN_LOW, align 4
  %7 = load i32, i32* @EC_SHUTDOWN_IO_PORT_LOW, align 4
  %8 = call i32 @outb(i32 %6, i32 %7)
  %9 = call i32 (...) @mmiowb()
  %10 = load i32, i32* @EC_SHUTDOWN_IO_PORT_DATA, align 4
  %11 = call i32 @inb(i32 %10)
  store i32 %11, i32* %1, align 4
  %12 = load i32, i32* %1, align 4
  %13 = load i32, i32* @BIT_SHUTDOWN_ON, align 4
  %14 = xor i32 %13, -1
  %15 = and i32 %12, %14
  %16 = load i32, i32* @EC_SHUTDOWN_IO_PORT_DATA, align 4
  %17 = call i32 @outb(i32 %15, i32 %16)
  %18 = call i32 (...) @mmiowb()
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %24, %0
  %20 = load i32, i32* %2, align 4
  %21 = icmp slt i32 %20, 65536
  br i1 %21, label %22, label %27

22:                                               ; preds = %19
  %23 = call i32 (...) @delay()
  br label %24

24:                                               ; preds = %22
  %25 = load i32, i32* %2, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %2, align 4
  br label %19

27:                                               ; preds = %19
  %28 = load i32, i32* %1, align 4
  %29 = load i32, i32* @BIT_SHUTDOWN_ON, align 4
  %30 = or i32 %28, %29
  %31 = load i32, i32* @EC_SHUTDOWN_IO_PORT_DATA, align 4
  %32 = call i32 @outb(i32 %30, i32 %31)
  %33 = call i32 (...) @mmiowb()
  ret void
}

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @mmiowb(...) #1

declare dso_local i32 @inb(i32) #1

declare dso_local i32 @delay(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
